FIX: players box height fix (should finally fix flickering)

--- a/static/layout.css
+++ b/static/layout.css
@@ -752,8 +752,8 @@ div#players {
     left: 50%;
     bottom: 0px;
     
-    height: 54px;
-    transform: translate(-50%, -10%);
+    height: 56px;
+    transform: translate(-50%, 0%);
      
     display: block;
     
